--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "massive": "^6.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
